# VacatureMatcher

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
config/: keywords.example.yaml
db/: db.py  export_json.py  import_json.py  ingest_run.py  minio_client.py  parse_vacancy.py  requirements.txt  schema.sql  upload_scrape.py  upsert.py  vacancy_flags.py
db/migrations/: 002_api_jobs.sql  003_vacancy_user_flags.sql  004_scrape_sources.sql
docs/: architecture.md  scoring.md
examples/: cv-voorbeeld.txt  motivatie-voorbeeld.md
rag/: .gitignore  build_index.py  index_store.py  integrate.py  keyword_match.py  llm_service.py  match_service.py  motivatie_context.py  motivatie_stijl_loader.py  ollama_client.py  ollama_motivatie.py  openai_compatible_client.py  query.py  rag_match.py  requirements.txt  run.sh  sinds_dates.py  vacature_beschikbaar.py  vacature_rag.py
rag/prompts/: motivatie-regels.md  motivatie-voorbeeld-odi.md
scraper/: .gitignore  fetch_details_fn.js  fetch_list.js  package.json  scrape_common.mjs  scrape_details.mjs  ververs_ikwerk.mjs  ververs_wbo.mjs  wbo_parse_summary.mjs  wbo_sitemap.mjs
tests/: conftest.py
tests/backend/: test_api_health.py  test_cv_parser.py  test_jobs.py
tests/db/: test_ingest_sources.py  test_parse_vacancy.py
tests/fixtures/: vacancies.json
tests/rag/: test_keyword_match.py  test_match_service.py  test_sinds_dates.py  test_vacature_beschikbaar.py  test_vacature_briefing_fallback.py  (+1 more)
web/: README.md
(+59 files in other folders)
